--- a/package.json
+++ b/package.json
@@ -21,7 +21,10 @@
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "cypress:open": "cypress open",
+    "cypress:ct": "cypress open-ct",
+    "cypress:run-ct": "cypress run-ct"
   },
   "eslintConfig": {
     "extends": [
@@ -42,8 +45,13 @@
     ]
   },
   "devDependencies": {
+    "@cypress/react": "^5.12.0",
+    "@cypress/webpack-dev-server": "^1.8.0",
+    "@testing-library/cypress": "^8.0.2",
+    "cypress": "^9.2.0",
     "lint-staged": "^12.1.4",
     "prettier": "^2.5.1",
-    "simple-git-hooks": "^2.7.0"
+    "simple-git-hooks": "^2.7.0",
+    "webpack-dev-server": "^4.7.1"
   }
 }
